# cavity_perturbation_tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  yee.py
docs/: cavity_perturbation_modules_1-5.md  fdtd_module_plan.md  gui_module_plan.md  meshing_module_plan.md  module1_cavity_equations.md  module2_fields_equations.md  module3_sample_equations.md  module4_perturbation_equations.md  module5_inverse_equations.md  ritz_module_plan.md
scripts/: _common.py  example_rectangular_sample_positions.py  example_rectangular_sample_sizes.py  example_roundtrip_all_cavities.py  example_verify_ritz_vs_perturbation.py  simulate_perturbation.py  visualize_cavity.py
src/cavity_perturbation/: cavity.py  fields.py  inverse.py  numerics.py  perturbation.py  ritz.py  sample.py
src/cavity_perturbation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cavity_perturbation/fdtd/: __init__.py  diagnostics.py  extract.py  materials.py  model.py  source.py  stability.py  stepper.py
src/cavity_perturbation/fdtd/grid/: __init__.py  rasterize.py  yee.py
src/cavity_perturbation_gui/: __init__.py  __main__.py  app.py  logging_bridge.py
src/cavity_perturbation_gui/adapters/: __init__.py  analytical_runner.py  cavity_adapter.py  fdtd_runner.py  field_sampling.py  geometry_description.py  inversion_runner.py  perturbation_runner.py  ritz_runner.py  sample_adapter.py
src/cavity_perturbation_gui/widgets/: __init__.py  curve_plot.py  field_plane_view.py  geometry_view3d.py  log_panel.py  main_window.py  sidebar.py
src/cavity_perturbation_gui/widgets/tabs/: __init__.py  _common.py  analytical_tab.py  fdtd_tab.py  geometry_tab.py  inversion_tab.py  perturbation_tab.py  variational_tab.py
src/cavity_perturbation_gui/workers/: __init__.py  solve_worker.py
tests/: conftest.py  test_cavity.py  test_fields.py  test_integration.py  test_inverse.py  test_numerics.py  test_perturbation.py  test_ritz.py  test_sample.py
tests/test_fdtd/: test_diagnostics.py  test_empty_cavity.py  test_extract.py  test_interface.py  test_materials.py  test_passivity.py  test_rasterize.py  test_small_sample.py  test_source.py  test_stability.py  test_stepper.py  test_yee.py
tests/test_gui/: test_analytical_tab.py  test_cavity_adapter.py  test_fdtd_runner.py  test_field_sampling.py  test_geometry_description.py  test_geometry_tab.py  test_inversion_runner.py  test_inversion_tab.py  test_logging_bridge.py  test_no_reverse_import.py  test_perturbation_tab.py  test_runners.py  test_sample_adapter.py  test_sidebar.py  test_solve_worker.py
