[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cavity-perturbation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
# Only needed by scripts/visualize_cavity.py -- kept out of the core
# dependencies since cavity_perturbation itself never plots anything.
viz = ["matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
# Pinned to 3.12 because the installed numpy stub package uses PEP 695 `type`
# statements unconditionally; this is a static-check target only and does not
# raise the project's runtime minimum (still Python 3.11+, per CLAUDE.md).
python_version = "3.12"
strict = true
# numpy's stubs return `Any` from most elementwise ops, so warn_return_any is
# pure noise on vectorized numeric code -- every other strict check stays on.
warn_return_any = false
